Added input entry element.

--- a/MauiTestApp/MainPage.xaml
+++ b/MauiTestApp/MainPage.xaml
@@ -24,6 +24,14 @@
                 SemanticProperties.HeadingLevel="Level2"
                 SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
 
+            <Entry
+                x:Name="CounterEntry"
+                Placeholder="Enter a number"
+                Keyboard="Numeric"
+                SemanticProperties.Hint="Enter a number to count"
+                Completed="OnCounterEntryCompleted"
+                HorizontalOptions="Fill" />
+
             <Button
                 x:Name="CounterBtn"
                 Text="Click me" 
